kubernetes/main/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
  annotations:
    external-dns.kubernetes.io/target: internal.haynesops
    gethomepage.dev/href: &url "https://emqx.haynesops.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/name: EMQX
    gethomepage.dev/description: MQTT broker
    gethomepage.dev/icon: emqx
    gethomepage.dev/pod-selector: apps.emqx.io/instance=emqx
    gethomepage.dev/siteMonitor: *url
spec:
  ingressClassName: traefik-internal
  rules:
    - host: emqx.haynesops.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emqx-dashboard
                port:
                  number: 18083
